-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 18
-
Component/s: hotspot
-
b29
-
x86_64
-
linux, windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8279107 | 19 | Smita Kamath | P3 | Resolved | Fixed | b04 |
| JDK-8279743 | 18.0.1 | Smita Kamath | P3 | Resolved | Fixed | b02 |
The following test failed in the JDK18 CI:
compiler/codegen/aes/TestAESMain.java
Here's a snippet from the log file:
----------System.err:(24/1636)----------
java.lang.Error: invalid offset: -1434443640
at compiler.codegen.aes.TestAESDecode.run(TestAESDecode.java:51)
at compiler.codegen.aes.TestAESMain.main(TestAESMain.java:192)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:568)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:833)
Caused by: java.lang.RuntimeException: invalid offset: -1434443640
at java.base/com.sun.crypto.provider.GHASH.ghashRangeCheck(GHASH.java:252)
at java.base/com.sun.crypto.provider.GHASH.update(GHASH.java:179)
at java.base/com.sun.crypto.provider.GaloisCounterMode$DecryptOp.update(GaloisCounterMode.java:1777)
at java.base/com.sun.crypto.provider.GaloisCounterMode$GCMDecrypt.decryptBlocks(GaloisCounterMode.java:1638)
at java.base/com.sun.crypto.provider.GaloisCounterMode$GCMDecrypt.doFinal(GaloisCounterMode.java:1484)
at java.base/com.sun.crypto.provider.GaloisCounterMode.engineDoFinal(GaloisCounterMode.java:439)
at java.base/javax.crypto.Cipher.doFinal(Cipher.java:2418)
at compiler.codegen.aes.TestAESDecode.run(TestAESDecode.java:43)
... 7 more
JavaTest Message: Test threw exception: java.lang.Error: invalid offset: -1434443640
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.Error: invalid offset: -1434443640
----------rerun:(54/8744)*----------
compiler/codegen/aes/TestAESMain.java
Here's a snippet from the log file:
----------System.err:(24/1636)----------
java.lang.Error: invalid offset: -1434443640
at compiler.codegen.aes.TestAESDecode.run(TestAESDecode.java:51)
at compiler.codegen.aes.TestAESMain.main(TestAESMain.java:192)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:77)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:568)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:833)
Caused by: java.lang.RuntimeException: invalid offset: -1434443640
at java.base/com.sun.crypto.provider.GHASH.ghashRangeCheck(GHASH.java:252)
at java.base/com.sun.crypto.provider.GHASH.update(GHASH.java:179)
at java.base/com.sun.crypto.provider.GaloisCounterMode$DecryptOp.update(GaloisCounterMode.java:1777)
at java.base/com.sun.crypto.provider.GaloisCounterMode$GCMDecrypt.decryptBlocks(GaloisCounterMode.java:1638)
at java.base/com.sun.crypto.provider.GaloisCounterMode$GCMDecrypt.doFinal(GaloisCounterMode.java:1484)
at java.base/com.sun.crypto.provider.GaloisCounterMode.engineDoFinal(GaloisCounterMode.java:439)
at java.base/javax.crypto.Cipher.doFinal(Cipher.java:2418)
at compiler.codegen.aes.TestAESDecode.run(TestAESDecode.java:43)
... 7 more
JavaTest Message: Test threw exception: java.lang.Error: invalid offset: -1434443640
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.Error: invalid offset: -1434443640
----------rerun:(54/8744)*----------
- backported by
-
JDK-8279107 compiler/codegen/aes/TestAESMain.java failed with "Error: invalid offset: -1434443640" after 8273297
-
- Resolved
-
-
JDK-8279743 compiler/codegen/aes/TestAESMain.java failed with "Error: invalid offset: -1434443640" after 8273297
-
- Resolved
-
- relates to
-
JDK-8273297 AES/GCM non-AVX512+VAES CPUs suffer after 8267125
-
- Resolved
-
-
JDK-8338639 longSize is poorly named
-
- Open
-
(1 links to)
There are no Sub-Tasks for this issue.